vlib/v/checker/tests/cannot_cast_to_struct.out
vlib/v/checker/tests/cannot_cast_to_struct.vv:10:7: warning: casting to struct is deprecated, use e.g. `Struct{...expr}` instead
    8 | 
    9 | fn main() {
   10 |     _ := Test(Abc{})
      |          ~~~~~~~~~~~
   11 |     sum := Alphabet(Xyz{})
   12 |     _ = Xyz(sum)
vlib/v/checker/tests/cannot_cast_to_struct.vv:10:7: error: cannot convert struct `Abc` to struct `Test`
    8 | 
    9 | fn main() {
   10 |     _ := Test(Abc{})
      |          ~~~~~~~~~~~
   11 |     sum := Alphabet(Xyz{})
   12 |     _ = Xyz(sum)
vlib/v/checker/tests/cannot_cast_to_struct.vv:12:6: error: cannot cast `Alphabet` to struct
   10 |     _ := Test(Abc{})
   11 |     sum := Alphabet(Xyz{})
   12 |     _ = Xyz(sum)
      |         ~~~~~~~~
   13 |     _ = Xyz(5)
   14 |     s := Abc{}
vlib/v/checker/tests/cannot_cast_to_struct.vv:13:6: error: cannot cast `int literal` to struct
   11 |     sum := Alphabet(Xyz{})
   12 |     _ = Xyz(sum)
   13 |     _ = Xyz(5)
      |         ~~~~~~
   14 |     s := Abc{}
   15 |     _ = Xyz(&s)
vlib/v/checker/tests/cannot_cast_to_struct.vv:15:6: error: cannot cast `&Abc` to struct
   13 |     _ = Xyz(5)
   14 |     s := Abc{}
   15 |     _ = Xyz(&s)
      |         ~~~~~~~
   16 | }
